--- a/templates/sshd_config.j2
+++ b/templates/sshd_config.j2
@@ -55,7 +55,7 @@ X11DisplayOffset {{ openssh_x11_display_offset }}
 X11UseLocalhost {{ openssh_x11_use_localhost }}
 PermitTTY {{ openssh_permit_tty }}
 
-PrintMotd no
+PrintMotd {{ openssh_print_motd }}
 
 PrintLastLog {{ openssh_print_last_log }}
 TCPKeepAlive {{ openssh_tcp_keep_alive }}
