Remove unsupported parameter.

--- a/templates/sshd_config_RedHat.j2
+++ b/templates/sshd_config_RedHat.j2
@@ -121,7 +121,7 @@ PermitUserEnvironment {{ openssh_permit_user_environment }}
 Compression {{ openssh_compression }}
 ClientAliveInterval {{ openssh_client_alive_interval }}
 ClientAliveCountMax {{ openssh_client_alive_count_max }}
-ShowPatchLevel {{ openssh_show_patch_level }}
+# ShowPatchLevel {{ openssh_show_patch_level }}
 UseDNS {{ openssh_use_dns }}
 PidFile {{ openssh_pid_file }}
 MaxStartups {{ openssh_max_startups }}
