Allow setting `openssh_allow_users` to restrict access. Update CI and documentation.

--- a/templates/sshd_config_RedHat.j2
+++ b/templates/sshd_config_RedHat.j2
@@ -146,3 +146,7 @@ Subsystem {{ openssh_subsystem }}
 #	AllowTcpForwarding no
 #	PermitTTY no
 #	ForceCommand cvs server
+
+{% if openssh_allow_users is defined %}
+AllowUsers {{ openssh_allow_users }}
+{% endif %}
