--- a/templates/sshd_config_Alpine.j2
+++ b/templates/sshd_config_Alpine.j2
@@ -68,3 +68,7 @@ AcceptEnv {{ item }}
 {% endfor %}
 
 Subsystem {{ openssh_subsystem }}
+
+{% if openssh_allow_users is defined %}
+AllowUsers {{ openssh_allow_users }}
+{% endif %}
