--- a/templates/sshd_config_Archlinux.j2
+++ b/templates/sshd_config_Archlinux.j2
@@ -75,3 +75,7 @@ AcceptEnv {{ item }}
 {% endfor %}
 
 Subsystem {{ openssh_subsystem }}
+
+{% if openssh_allow_users is defined %}
+AllowUsers {{ openssh_allow_users }}
+{% endif %}
