--- a/templates/sshd_config_RedHat.j2
+++ b/templates/sshd_config_RedHat.j2
@@ -46,7 +46,7 @@ LogLevel {{ openssh_loglevel }}
 
 LoginGraceTime {{ openssh_login_grace_time }}
 PermitRootLogin {{ openssh_permit_root_login }}
-StrictModes {{ openssh_scrict_modes }}
+StrictModes {{ openssh_strict_modes }}
 MaxAuthTries  {{ openssh_max_auth_tries }}
 MaxSessions {{ openssh_max_sessions }}
 
