--- a/templates/sshd_config_RedHat.j2
+++ b/templates/sshd_config_RedHat.j2
@@ -21,7 +21,7 @@ AddressFamily {{ openssh_address_family }}
 ListenAddress {{ address }}
 {% endfor %}
 
-{% for hostkey in openssh_host_key %}
+{% for hostkey in openssh_host_keys %}
 HostKey {{ hostkey }}
 {% endfor %}
 
