--- a/templates/sshd_config_Suse.j2
+++ b/templates/sshd_config_Suse.j2
@@ -73,7 +73,7 @@ VersionAddendum {{ openssh_version_addendum }}
 
 Banner {{ openssh_banner }}
 
-{% for item in openssh_accept_env %}
+{% for item in openssh_accept_envs %}
 AcceptEnv {{ item }}
 {% endfor %}
 
