Add TrustedCAKeys option to sshd_config

--- a/templates/sshd_config_Archlinux.j2
+++ b/templates/sshd_config_Archlinux.j2
@@ -85,3 +85,5 @@ AllowUsers {{ openssh_allow_users }}
 {% if openssh_allow_groups is defined %}
 AllowGroups {{ openssh_allow_groups }}
 {% endif %}
+
+TrustedUserCAKeys {{ openssh_trusted_user_ca_keys }}
