--- a/templates/sshd_config_Debian.j2
+++ b/templates/sshd_config_Debian.j2
@@ -87,3 +87,4 @@ AllowUsers {{ openssh_allow_users }}
 AllowGroups {{ openssh_allow_groups }}
 {% endif %}
 
+TrustedUserCAKeys {{ openssh_trusted_user_ca_keys }}
