--- a/templates/sshd_config_RedHat-7.j2
+++ b/templates/sshd_config_RedHat-7.j2
@@ -88,3 +88,5 @@ AllowUsers {{ openssh_allow_users }}
 {% if openssh_allow_groups is defined %}
 AllowGroups {{ openssh_allow_groups }}
 {% endif %}
+
+TrustedUserCAKeys {{ openssh_trusted_user_ca_keys }}
