--- a/templates/sshd_config_Archlinux.j2
+++ b/templates/sshd_config_Archlinux.j2
@@ -79,11 +79,10 @@ AcceptEnv {{ item }}
 Subsystem {{ openssh_subsystem }}
 
 {% if openssh_allow_users is defined %}
-AllowUsers {{ openssh_allow_users }}
+AllowUsers {{ openssh_allow_users | join(' ') }}
 {% endif %}
 
 {% if openssh_allow_groups is defined %}
-AllowGroups {{ openssh_allow_groups }}
-{% endif %}
+AllowGroups {{ openssh_allow_groups | join(' ') }}
 
 TrustedUserCAKeys {{ openssh_trusted_user_ca_keys }}
